--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -59,6 +59,7 @@ $colors: (
   "gray-dark":  $gray-800
 ) !default;
 // scss-docs-end colors-map
+
 //更改主色、輔助色
 
 $primary:       #6C51E2 !default;
@@ -68,7 +69,7 @@ $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
-$dark:          $gray-900 !default;
+$dark:          black !default;//gray-900 !default
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
@@ -359,7 +360,8 @@ $border-color:                $gray-300 !default;
 
 $border-radius:               .25rem !default;
 $border-radius-sm:            .2rem !default;
-$border-radius-lg:            .3rem !default;
+$border-radius-lg:            .5rem !default;
+// $border-radius-lg:            .3rem !default;
 $border-radius-pill:          50rem !default;
 
 $box-shadow:                  0 .5rem 1rem rgba($black, .15) !default;
@@ -993,12 +995,14 @@ $pagination-disabled-border-color:  $gray-300 !default;
 $pagination-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 
 // Cards
-
-$card-spacer-y:                     $spacer !default;
-$card-spacer-x:                     $spacer !default;
+$card-spacer-y:                     0px !default;
+// $card-spacer-y:                     $spacer !default;
+$card-spacer-x:                     0px !default;
+// $card-spacer-x:                     $spacer !default;
 $card-title-spacer-y:               $spacer / 2 !default;
 $card-border-width:                 $border-width !default;
-$card-border-radius:                $border-radius !default;
+$card-border-radius:                $border-radius-lg !default;
+// $card-border-radius:                $border-radius !default;
 $card-border-color:                 rgba($black, .125) !default;
 $card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
 $card-cap-padding-y:                $card-spacer-y / 2 !default;
