--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,3 +1,14 @@
+@mixin pad {
+    @media (max-width: 992px) {
+        @content;
+    }
+}
+@mixin mobile {
+    @media (max-width: 576px) {
+        @content;
+    }    
+}
+
 *,*::before,*::after{
     // outline: 1px solid green;
 }
@@ -26,7 +37,7 @@ a{
         transform: translateX(-50%);
     }
     .user-select-bar{
-        width: 920px;
+        width: 70%;
         bottom: -20%;
         left: 50%;
         transform: translateX(-50%);
@@ -45,6 +56,13 @@ a{
     border-bottom: 2px solid #6C51E2;
     color: #6C51E2;
 }
+
+.swiper-container {
+    min-width: 100%;
+    height: 260px;
+    overflow: hidden;
+}
+
 .top-choices-list{
     li{
         cursor:pointer
@@ -52,6 +70,7 @@ a{
     img{
         height: 175px;
         object-fit: cover;
+        border-radius: 20px;
     }
 }
 .popular-destinations-list{
@@ -93,7 +112,17 @@ a{
     }
 }
 footer{
-    .display-5{
+    .footer-title{
+        font-size:48px;
         font-weight: bold;
+        @include mobile{
+            font-size:24px;
+        }
+    }
+    form{
+        width: 40%;
+        @include pad{
+            width: 90%;
+        }
     }
 }
