--- a/scss/_result.scss
+++ b/scss/_result.scss
@@ -9,7 +9,7 @@
     }    
 }
 *,*::before,*::after{
-    outline: 1px solid green;
+    // outline: 1px solid green;
 }
 .container{
     @include pad{
